--- a/PDFContorPagini/PDFContorPagini.csproj
+++ b/PDFContorPagini/PDFContorPagini.csproj
@@ -78,6 +78,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Controls\OverlayProgressBar.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
